whatmodpack update - fixed modlist export parser bugs - implemented mod loading error catching - old mods now removed upon muliple load requests - fixed non-modrnith track titles to match - comments - rounded icons - fixed track cutoff on mobile __rad3__ - added server status with player list

--- a/whatmodpack/radv3/special.css
+++ b/whatmodpack/radv3/special.css
@@ -31,12 +31,24 @@
     align-items: center;
 }
 
-.desc b {
+.desc p {
     margin: 7px;
 }
 
-#desc2 {
+.desc2 {
     padding: 2px;
+    justify-content: center;
+}
+
+#info-desc-box {
+    display: flex;
+}
+
+/* rearrange things if mobile */
+@media only screen and (max-width: 600px) {
+    #info-desc-box {
+        flex-direction: column;
+    }
 }
 
 .desc div {
